<resources>
    <string name="app_name">Robsi</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="text_test">Prueba</string>
    <string name="text_my_certificates">Mis certificados</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="description_create_account">imagen de iniciar o crear cuenta</string>
    <string name="text_sign_in">iniciar sesión</string>
    <string name="text_register_user">registrarme</string>
    <string name="text_on_boarding_end">finalizar</string>
    <string name="text_on_boarding_skip">saltar</string>
    <string name="description_image_onboarding">estas son las imagenes de induccion</string>
    <string name="description_image_welcome">Esta es la imagen de bienvenida</string>
    <string name="text_register">registrarme</string>
    <string name="description_image_sign_in">esta es la animacion de iniciar sesion</string>
    <string name="text_null">nulo</string>
    <string name="description_image_current">esta es la imagen de perfil</string>
    <string name="text_you_want_to_learn">¿Qué deseas aprender?</string>
    <string name="text_courses_for_you">Estos son las rutas que tenemos para ti</string>
    <string name="description_image_slider">esta son las imagenes del slider</string>
    <string name="description_image_category">este es el icono de la categoria de cursos</string>
    <string name="description_image_certificate">esta es la imagen del diplomado</string>
    <string name="text_progress_course_completed">Progreso: Curso completado</string>
    <string name="text_uninitiated_course">Progreso: Sin iniciar</string>
    <string name="text_progress_course">Progreso: En curso</string>
    <string name="text_completed_course">!Has completado con éxito el curso!</string>
    <string name="text_update_image">actualizar imagen</string>
    <string name="text_logout">cerrar sesión</string>
    <string name="text_general">general</string>
    <string name="text_notifications">Notificaciones</string>
    <string name="text_sounds">Sonidos</string>
    <string name="text_mode_dark">Modo oscuro</string>
    <string name="text_password_changed">Tu clave se ha cambiado exitosamente</string>
    <string name="text_minimum_characters">Las contraseña debe ser al menos de 6 caracteres</string>
    <string name="text_passwords_do_not_match">Tu nueva contraseña y la de confirmación no son iguales</string>
    <string name="text_password_incorrect">Tu clave actual es incorrecta</string>
    <string name="text_save">GUARDAR</string>
    <string name="text_enable_permissions">Ve ajustes para activar los permisos</string>
    <string name="text_updated_data">Datos actualizados correctamente</string>
    <string name="text_error_data">Error al actualizar. Revisa tus datos</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="text_reset_password">¿Olvidaste tú contraseña?</string>
    <string name="text_incorrect_data">Tu correo o clave son incorrectas</string>
    <string name="text_send_email">enviar correo electrónico</string>
    <string name="text_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="text_unregistered_email">No hay ninguna cuenta registrada con este correo</string>
    <string name="text_good_night">Buenas noches</string>
    <string name="text_good_afternoon">Buenas tardes</string>
    <string name="text_good_morning">Buenos dias</string>
    <string name="text_active_certificate">Ya tienes un diploma de este curso. Revisa en tu perfil en la opcion mis
        certificados
    </string>
    <string name="text_without_certificates">Aun no tienes certificaciones</string>
    <string name="text_new">Nuevo</string>
    <string name="text_excellent">!Excelente!</string>
    <string name="text_course_completed">haz completado este curso. Puedes ver y descargar tu diploma</string>
    <string name="text_see_certificates">ver mis diplomas</string>
    <string name="description_icon_certificates">este es el icono de ver certificados</string>
    <string name="text_enter_your_email">Ingresa tu correo electrónico para recibir un enlace de recuperación de
        contraseña
    </string>
    <string name="text_invalid_email">Correo no valido</string>
    <string name="text_existing_email">Este correo ya existe</string>
    <string name="text_result">Resultado:</string>
    <string name="text_email">Correo electrónico</string>
    <string name="text_password">Contraseña</string>
    <string name="text_names">Nombres</string>
    <string name="text_last_names">Apellidos</string>
    <string name="text_current_password">Contraseña actual</string>
    <string name="text_new_password">Nueva contraseña</string>
    <string name="text_confirmed_new_password">Confirma tu nueva contraseña</string>
    <string name="text_sent_email">Correo electronico enviado</string>
    <string name="text_next">Siguiente</string>
    <string name="text_option_choose">Elige una opción</string>
    <string name="text_capture_image">Tomar foto</string>
    <string name="text_choose_image">Elegir foto</string>
    <string name="text_cancel">Cancelar</string>
    <string name="text_home">Inicio</string>
    <string name="text_profile">Perfil</string>
    <string name="text_check">Comprobar</string>
    <string name="text_cancel_review">¿Estás seguro de que deseas salir?</string>
    <string name="text_no">No</string>
    <string name="text_yes">Si</string>
    <string name="text_click_again">Pulsa de nuevo para salir</string>
    <string name="text_continue">Continuar</string>
    <string name="text_retry">Reintentar</string>
    <string name="name_preferences">preferences_user</string>
    <string name="text_choose_for_courses">Elige por cursos</string>
    <string name="text_choose_for_categories">Elige por categorias</string>
    <string name="name_app">ALP</string>
    <string name="text_app_secondary">Aprende lenguajes de programación</string>
    <string name="description_image_logo">Esta es la descripcion de la imagen principal</string>
    <string name="description_profile_image">Esta es la imagen principal para ir al perfil</string>
    <string name="text_no_found">No hay ningun resultado</string>
    <string name="text_review_confirm">Haz completado el curso. ¿Deseas realizar tu examen para obtener tu
        certificado?
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_code">Compilador de código</string>
    <string name="title_languages">Selecciona un lenguaje</string>
    <string name="banner_home_ad_unit_id">ca-app-pub-2689265379329623/1379381616</string>
    <string name="banner_courses_ad_unit_id">ca-app-pub-2689265379329623/6839059026</string>
    <string name="banner_topics_ad_unit_id">ca-app-pub-2689265379329623/2944243131</string>
    <string name="banner_certificate_ad_unit_id">ca-app-pub-2689265379329623/5152631746</string>
    <string name="intersitial_courses_ad_unit_id">ca-app-pub-2689265379329623/2142277871</string>
    <string name="intersitial_temary_ad_unit_id">ca-app-pub-2689265379329623/6624749682</string>
    <string name="description_image_result">Esta es la imagen del resultado del codigo</string>
    <string name="text_again">REINTENTAR</string>
    <string name="description_image_result_question">Esta es la imagen del resultado de la pregunta</string>
    <string name="description_image_new_code">Esta es la imagen para crear nuevo codigo de compilacion</string>
    <string name="icon_setting">Configuraciones</string>
    <string name="text_icon_save">GUARDAR</string>
    <string name="text_full_name">%1$s %2$s</string>
    <string name="text_share">Compartir en:</string>
    <string name="text_report">Reportar</string>
    <string name="incorrect_information">La información es inexacta</string>
    <string name="content_wrong">El contenido está erróneo</string>
    <string name="link_down">Los links no están funcionando</string>
    <string name="other">Otro</string>
    <string name="text_one_reply">%1$d respuesta</string>
    <string name="text_visits">%1$d</string>
    <string name="text_comments">%1$d</string>
    <string name="text_quantity_replies">%1$d respuestas</string>
    <string name="text_minus_likes"> %1$d</string>
    <string name="text_plush_likes"> %1$d</string>
    <string name="text_no_replies">Sin respuestas</string>
    <string name="text_comment">COMENTAR</string>
    <string name="text_success_comment">Se ha publicado tu comentario</string>
    <string name="text_update_comment">Se ha actualizado tu comentario</string>
    <string name="text_inserted">Se ha insertado</string>
    <string name="text_updated">Se ha actualizado</string>
    <string name="text_run">RUN</string>
    <string name="description_image_topics">Icono de tema</string>
    <string name="text_delete_favorite">Eliminado de favoritos</string>
    <string name="text_add_favorite">Guardado en favoritos</string>
    <string name="text_description_on_boarding_one">En esta aplicacion podrás aprender las bases básicas para iniciar en
        la programación totalmente gratis.
    </string>
    <string name="text_description_on_boarding_two">Encontrarás un apartado para que pruebes tu código como también en
        los ejercicios de cada curso.
    </string>
    <string name="text_description_on_boarding_three">Podrás obtener y descargar tu certificado aprobando cada temario y
        examen.
    </string>
    <string name="text_title_on_boarding_one">Bienvenido</string>
    <string name="text_title_on_boarding_two">Practica, compila tu código</string>
    <string name="text_title_on_boarding_three">y obtén tu certificado</string>
    <string name="text_favorites">Favoritos</string>
    <string name="text_send_report">Tu reporte se ha enviado correctamente</string>
    <string name="text_error_send">Error al enviar</string>
    <string name="text_topic_finish">¿Qué le ha parecido este entrenamiento?</string>
    <string name="text_well_done">Bien hecho</string>
    <string name="text_very_easy">Muy fácil</string>
    <string name="text_easy">Fácil</string>
    <string name="text_right">Lo justo</string>
    <string name="text_diffcult">Difícil</string>
    <string name="text_very_difficult">Muy difícil</string>
    <string name="text_skip">SALTAR</string>
    <string name="text_submit">ENVIAR</string>
    <string name="text_url">URL</string>
    <string name="text_copied">COPIADO</string>
    <string name="text_certificate">Certificado</string>
    <string name="text_wait_download">Porfavor espera descargando el archivo…</string>
    <string name="text_completed_download">Se ha descargado el archivo</string>
    <string name="text_congratulations">¡Felicidades!</string>
    <string name="text_view_certificate">VER DIPLOMA</string>
    <string name="text_copy">COPIAR</string>
    <string name="text_share_2">COMPARTIR</string>
    <string name="description_create_comment">Crear comentario</string>
    <string name="text_review">EXAMEN</string>
    <string name="text_write_comment">Escribe aqui tu comentario</string>
    <string name="icons_edit">⋮</string>
    <string name="text_edited">(editado)</string>
    <string name="description_create_reply">Agregar respuesta</string>
    <string name="description_separator">Imagen separador de respuestas</string>
    <string name="description_edit_or_delete">Eliminar o editar una comentario o respuesta</string>
    <string name="text_report_problem">Reportar un problema</string>
    <string name="text_select_type_problem">Porfavor seleccionar el tipo de problema</string>
    <string name="text_content_output">Contenido fuera de tema o no relacionado</string>
    <string name="text_write_message_optional">Escribe aqui tu mensaje (opcional)</string>
</resources>