<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by estiven on 3/08/21, 3:05 p. m.
  ~  * Copyright (c) 2021 . All rights reserved.
  ~  * Last modified 1/08/21, 7:41 p. m.
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.main.view.fragments.CertificatesDetailsFragment"
                                                   android:background="?attr/colorOnPrimary">
    <TextView
            android:text="@string/text_congratulations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView11"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp" android:textSize="30sp"
            android:fontFamily="@font/changa_bold"/>

    <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginRight="16dp" android:layout_marginEnd="16dp"/>

    <TextView
            android:text="@string/text_completed_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/webView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp" android:textSize="16sp"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/iLUrl"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:hint="@string/text_url"
            app:boxCornerRadiusBottomEnd="@dimen/size_input_radius"
            app:boxCornerRadiusBottomStart="@dimen/size_input_radius"
            app:boxCornerRadiusTopEnd="@dimen/size_input_radius"
            app:boxCornerRadiusTopStart="@dimen/size_input_radius"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" app:layout_constraintEnd_toStartOf="@+id/btnCopy"
            android:layout_marginTop="16dp" android:enabled="false" android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/iEUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/changa_semibold"
                android:inputType="textEmailAddress" android:textSize="14sp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/text_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnCopy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iLUrl" app:layout_constraintBottom_toBottomOf="@+id/iLUrl"
            android:layout_marginRight="16dp" android:layout_marginEnd="16dp"
            app:cornerRadius="@dimen/size_button_radius" app:backgroundTint="?attr/colorSecondaryVariant"
            android:insetBottom="0dp" android:insetTop="0dp"/>
    <Button
            android:text="@string/text_share_2"
            android:layout_width="180dp"
            android:layout_height="wrap_content" android:id="@+id/btnShare"
            app:layout_constraintTop_toBottomOf="@+id/iLUrl" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="24dp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:insetBottom="0dp" android:insetTop="0dp" app:backgroundTint="?attr/colorSecondaryVariant"/>
    <Button
            android:text="@string/text_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/btnSave"
            app:layout_constraintTop_toTopOf="@+id/btnShare"
            app:layout_constraintBottom_toBottomOf="@+id/btnShare" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnShare" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginRight="16dp" android:layout_marginEnd="16dp" android:insetBottom="0dp"
            android:insetTop="0dp" app:backgroundTint="?attr/colorSecondaryVariant" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorOnPrimary"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_url="https://assets2.lottiefiles.com/datafiles/V6a7qEnbQRmA83z/data.json"/>
</androidx.constraintlayout.widget.ConstraintLayout>